--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
   </header>
   <main>
     <section id="stratagem-info" aria-label="Stratagem Information">
-      <img id="stratagem-icon" src="" alt="Stratagem Icon" hidden>
       <div id="stratagem-name" aria-live="polite"></div>
     </section>
     <h1 id="stratagem-display">Stratagem Input Practice</h1>
-    <img id="trauma-guy" src="img/trauma-guy-opt.jpg" alt="Trauma Team Member" loading="lazy">
+    <img id="trauma-guy" src="img/trauma-guy-opt.jpg" alt="Trauma Guy" loading="lazy">
     <div id="feedback">Press ENTER to start!</div>
     <div id="timer" aria-live="polite"></div>
     <div class="controls">
-      <label for="controlToggle">Use WASD keys:</label>
+      <label for="controlToggle">WASD Toggle:</label>
       <input type="checkbox" id="controlToggle" name="controlToggle">
     </div>
   </main>
