Removing self-explaining comments

--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
   <link rel="icon" href="img/helldivers.ico">
 </head>
 <body>
-<div id="app"> <!-- Wrap content for centering and better structure -->
-  <section id="stratagem-info"> <!-- Semantic element for related content -->
+<div id="app">
+  <section id="stratagem-info">
     <img id="stratagem-icon" src="" alt="Stratagem Icon" style="display: none;"/>
     <div id="stratagem-name"></div>
   </section>
   <figure>
-    <img id="helldivers-logo" src="img/helldivers.ico" alt="Helldivers Logo" height="75"/> <!-- Self-closing tag and alt attribute -->
+    <img id="helldivers-logo" src="img/helldivers.ico" alt="Helldivers Logo" height="75"/>
   </figure>
   <div id="stratagem-display">Stratagem Input Practice</div>
-  <img id="trauma-guy" src="https://i.kinja-img.com/gawker-media/image/upload/c_fit,q_60,w_645/435f9c2fa17254a1da3fcf3182d84522.jpg" alt="Trauma Guy"/> <!-- Self-closing tag and alt attribute -->
+  <img id="trauma-guy" src="https://i.kinja-img.com/gawker-media/image/upload/c_fit,q_60,w_645/435f9c2fa17254a1da3fcf3182d84522.jpg" alt="Trauma Guy"/>
   <div id="feedback">Press ENTER to start!</div>
   <div id="timer"></div>
   <div>
     <label for="controlToggle">Use WASD keys</label>
-    <input type="checkbox" id="controlToggle" name="controlToggle"/> <!-- Self-closing tag -->
+    <input type="checkbox" id="controlToggle" name="controlToggle"/>
   </div>
 </div>
 <script src="js/script.js"></script>
