--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <input type="checkbox" id="controlToggle" name="controlToggle"/>
   </div>
 </div>
+<footer>
+  <span id="version-banner">Version: 0.0.1</span> |
+  <a href="https://github.com/marabb01/HD2_Stratagems_Training/issues" target="_blank" id="feedback-link">Feedback</a>
+</footer>
+<script src="js/version.js"></script>
 <script src="js/script.js"></script>
 <script src="js/stratagems.js"></script>
 </body>
