Removing hardcoded from index

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
 </div>
 <footer>
-  <span id="version-banner">Version: 0.0.1</span> |
+  <span id="version-banner"></span>|
   <a href="https://github.com/marabb01/HD2_Stratagems_Training/issues" target="_blank" id="feedback-link">Feedback</a>
 </footer>
 <script src="js/version.js"></script>
