Fixing random text if image doesnt load

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="app">
   <section id="stratagem-info">
-    <img id="stratagem-icon" src="" alt="Stratagem Icon" style="display: none;"/>
+    <img id="stratagem-icon" src="" style="display: none;"/>
     <div id="stratagem-name"></div>
   </section>
   <figure>
